--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "scripts": {
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint . --ext .ts",
+        "deploy": "gh-pages -d dist",
+        "predeploy": "npm run build"
     },
     "repository": {
         "type": "git",
@@ -14,7 +16,7 @@
     "keywords": [],
     "author": "Kseniya Maruseva",
     "license": "ISC",
-    "homepage": "",
+    "homepage": "http://Maruseva.github.io/Online-Store",
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.46.1",
         "@typescript-eslint/parser": "^5.46.1",
@@ -25,6 +27,7 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
+        "gh-pages": "^5.0.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.2.0",
         "prettier": "2.2.1",
